--- a/tic-tac-toe-react/src/App.css
+++ b/tic-tac-toe-react/src/App.css
@@ -1,24 +1,25 @@
-.App {
-  text-align: center;
+* {
+  box-sizing:border-box;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+.playground {
+    display: flex;
+    width: 600px;
+    height: 600px;
+    flex-direction: row;
+    flex-wrap:  wrap;
+    justify-content: flex-start;
+  }
+  .cell {
+    height: 33.3%;
+    width: 33.3%;
+    border: 15px solid black;
+    font-size: 5em;
+    font-family:helvetica;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .cell:hover {
+    cursor:pointer;
+    background-color: red;
+  }
