--- a/tic-tac-toe-react/src/App.css
+++ b/tic-tac-toe-react/src/App.css
@@ -1,6 +1,9 @@
 * {
   box-sizing:border-box;
 }
+body{
+  background-color: lightslategrey;
+}
 .playground {
     display: flex;
     width: 600px;
@@ -12,7 +15,7 @@
   .cell {
     height: 33.3%;
     width: 33.3%;
-    border: 15px solid black;
+    border: 15px double black;
     font-size: 5em;
     font-family:helvetica;
     display:flex;
@@ -21,5 +24,5 @@
   }
   .cell:hover {
     cursor:pointer;
-    background-color: red;
+    background-color: darkslategrey;
   }
